--- a/style.css
+++ b/style.css
@@ -92,11 +92,6 @@ header {
   align-items: center;
 }
 
-.search:hover > .search-input {
-  width: 180px;
-  padding: 0 6px;
-}
-
 .search-btn {
   color: var(--text-clr);
   float: right;
@@ -114,11 +109,16 @@ header {
   color: var(--text-clr);
   background: none;
   float: left;
-  padding: 0;
+  padding: 0 6px;
   font-size: 16px;
   transition: 0.4s;
   line-height: 30px;
-  width: 0px;
+  width: 180px;
+}
+
+.search-input.hidden {
+  width: 0;
+  padding: 0;
 }
 
 /* =========== Dark mode switcher =========== */
