--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@
 :root {
   --clr-white: #fff;
   --clr-light: #e9ecf1;
-  --clr-dark: #292C35;
+  --clr-dark: #292c35;
   --clr-gray: #333;
   --clr-light-gray: #f2f2f2;
   --clr-black: rgb(17, 16, 16);
   --clr-accent: #f89c09;
   --clr-yellow: #c7cbd1;
-  --overlay-clr-light-theme: rgba(0, 0, 0, .5);
+  --overlay-clr-light-theme: rgba(0, 0, 0, 0.5);
   --overlay-clr-dark-theme: rgba(83, 83, 83, 0.507);
   --box-shadow-clr: rgba(34, 60, 80, 0.2);
 
@@ -41,6 +41,28 @@
   --foreground: var(--clr-black);
   --background: var(--clr-dark);
   --overlay-clr: var(--overlay-clr-dark-theme);
+}
+
+.skeleton {
+  opacity: 0.7;
+  animation: skeleton-loading 1s linear infinite alternate;
+}
+
+.skeleton-box {
+  border-radius: 1rem;
+  margin: 1rem 0rem 1rem 2rem;
+  height: 12rem;
+}
+
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(200, 20%, 70%);
+  }
+
+  100% {
+    background-color: hsl(200, 20%, 95%);
+  }
 }
 
 body {
@@ -72,10 +94,15 @@ header {
 }
 
 .header-title span {
-  color: transparent;    
-	-webkit-background-clip: text;
-	background-clip: text;
-	background-image: linear-gradient(90deg, rgb(240, 82, 82), rgb(248, 168, 19), rgb(201, 84, 247));
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-image: linear-gradient(
+    90deg,
+    rgb(240, 82, 82),
+    rgb(248, 168, 19),
+    rgb(201, 84, 247)
+  );
   font-weight: 800;
 }
 
@@ -109,21 +136,20 @@ header {
   color: var(--text-clr);
   background: none;
   float: left;
-  padding: 0 6px;
   font-size: 16px;
-  transition: 0.4s;
   line-height: 30px;
-  width: 180px;
-}
-
-.search-input.hidden {
   width: 0;
   padding: 0;
 }
 
+.search-input.search-active {
+  padding: 0 6px;
+  width: 180px;
+}
+
 /* =========== Dark mode switcher =========== */
 .dark-mode-checkbox {
-  opacity: 0;
+  opacity: 0; 
   position: absolute;
 }
 
@@ -238,7 +264,7 @@ main {
 
 .tag-list {
   display: flex;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
 }
 
 .tag-item {
@@ -259,15 +285,14 @@ main {
 }
 
 .tag-item-active {
-  background:		#ffa700;
+  background: #ffa700;
   border: none;
-  
 }
 
 .add-tag input {
   flex: 1;
   font-size: 1.1rem;
-  margin-left: .45rem;
+  margin-left: 0.45rem;
   margin-top: 0;
   padding: 0.5rem 0rem;
   max-width: 70%;
@@ -358,7 +383,6 @@ main {
 .modal-header .add-title-input,
 .modal-body .add-note-input {
   font-size: 1.2rem;
-  
   background-color: var(--foreground);
   color: var(--text-clr);
 }
@@ -370,6 +394,11 @@ main {
 .modal-body .add-title-input {
   font-weight: bold;
   letter-spacing: 5px;
+}
+
+.dd-note-input {
+  font-family: inherit;
+  letter-spacing: 1px;
 }
 
 .modal-tags-container {
@@ -397,7 +426,6 @@ main {
 .remaining-symbols {
   text-align: right;
   padding: 1rem 2rem 0 0;
-  font-size: .85rem;
+  font-size: 0.85rem;
   color: var(--text-clr);
-}  
-
+}
